--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2128,7 +2128,7 @@ form.inline-form {
   }
 }
 .scrolling-grid::after {
-  pointer-events: none
+  pointer-events: none;
   content: '';
   position: absolute;
   left: 0; right: 0;
