--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -160,7 +160,7 @@
         <div class="location-info">
           {{#if geo_vacancy_coords}}
           <div class="container-content container-map">
-            <div id="map-full" data-map-options='{
+            <div id="map-full" data-map-name="vacancyMap" data-map-options='{
               "center": {
                 "lat": {{geo_vacancy_coords.0.lat}},
                 "lng": {{geo_vacancy_coords.0.lon}}
@@ -276,16 +276,13 @@
                 }
               ],
               "disableDefaultUI": true
-            }' data-map-pins='[
-            {{#each (arrayify geo_vacancy_coords)}}
-              {
-                "coords": {{{stringify this}}},
-                "title": "{{../organisation.name}} - {{../title}}",
-                "info_window": "<h3>{{../organisation.name}}</h3><p>{{../title}}</p>"
-              }{{#unless @last}},{{/unless}}
-            {{/each}}
-            ]'></div>
+            }'></div>
           </div>
+            {{#each (arrayify geo_vacancy_coords)}}
+              <marker style="display:none;" data-map="vacancyMap" data-lat="{{lat}}" data-lng="{{lon}}" data-title="{{../organisation.name}} - {{../title}}">
+                <h3>{{../organisation.name}}</h3><p>{{../title}}</p>
+              </marker>
+            {{/each}}
           {{else}}
           <h4 class="mdc-typography--headline6">Location</h4>
           <p>
