--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -60,16 +60,23 @@
         <label for="saved-search-name" class="mdc-floating-label mdc-floating-label--float-above">Save search</label>
         <div class="mdc-line-ripple"></div>
       </div>
-      Set up email alerts
-      <div class="mdc-switch">
-        <input type="checkbox" id="email-switch-0" class="mdc-switch__native-control" role="switch" checked="checked" name="subscribe">
-        <div class="mdc-switch__background">
-          <div class="mdc-switch__knob"></div>
+      <div class="mdc-form-field">
+        <div class="mdc-checkbox">
+          <input type="checkbox"
+                 class="mdc-checkbox__native-control"
+                 id="email-on"/>
+          <div class="mdc-checkbox__background">
+            <svg class="mdc-checkbox__checkmark"
+                 viewBox="0 0 24 24">
+              <path class="mdc-checkbox__checkmark-path"
+                    fill="none"
+                    d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+            </svg>
+            <div class="mdc-checkbox__mixedmark"></div>
+          </div>
         </div>
+        <label for="email-on">Send jobs matching this search by email</label>
       </div>
-      <label for="email-switch-0">
-        <span class="far fa-envelope fa-2x"></span>
-      </label>
     </section>
     <footer class="mdc-dialog__footer">
       <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel">Cancel</button>
