--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -3,7 +3,7 @@
 <div id="detailed-results-container" class="container-content goodmoves-saved-searches">
   <div class="settings">
     <p class="mdc-typography--body1">
-      <strong>Email frequency</strong>
+      Email frequency
     </p>
     <div class="mdc-form-field">
       <div class="mdc-radio">
@@ -40,12 +40,12 @@
               <strong>Search name</strong>
             </span>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone align-centre">
             <span class="mdc-list-item__text">
               <strong>Include in email</strong>
             </span>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone align-centre">
             <span class="mdc-list-item__text">
               <strong>Delete</strong>
             </span>
@@ -94,7 +94,7 @@
                 </div>
               </span>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone align-centre">
               {{#> ajax_chip
                 onUrl="/toggle-subscription"
                 offUrl="/toggle-subscription"
