--- a/sites/configurations/goodmoves/templates/account/settings.hbs
+++ b/sites/configurations/goodmoves/templates/account/settings.hbs
@@ -5,6 +5,68 @@
     Settings
   </h1>
 
+  <h2 class="mdc-typography--headline4 v-margin-full">
+    Emails
+  </h2>
+  <div class="goodmoves-saved-searches">
+    <div class="settings">
+      <p class="mdc-typography--body1">
+        Email frequency for new job alerts
+      </p>
+      <div class="mdc-form-field">
+        <div class="mdc-radio">
+          <input class="mdc-radio__native-control" type="radio" id="daily" name="frequency" checked>
+          <div class="mdc-radio__background">
+            <div class="mdc-radio__outer-circle"></div>
+            <div class="mdc-radio__inner-circle"></div>
+          </div>
+        </div>
+        <label for="daily">Daily</label>
+      </div>
+      <div class="mdc-form-field">
+        <div class="mdc-radio">
+          <input class="mdc-radio__native-control" type="radio" id="weekly" name="frequency" checked>
+          <div class="mdc-radio__background">
+            <div class="mdc-radio__outer-circle"></div>
+            <div class="mdc-radio__inner-circle"></div>
+          </div>
+        </div>
+        <label for="weekly">Weekly</label>
+      </div>
+    </div>
+    <p class="mdc-typography--body1">
+      <a href="/searches">Edit searches</a>
+    </p>
+  </div>
+  <div class="goodmoves-shortlist">
+    <div class="settings">
+      <div class="mdc-form-field">
+        <div class="mdc-checkbox">
+          <input type="checkbox"
+                 class="mdc-checkbox__native-control"
+                 id="closing-alerts"/>
+          <div class="mdc-checkbox__background">
+            <svg class="mdc-checkbox__checkmark"
+                 viewBox="0 0 24 24">
+              <path class="mdc-checkbox__checkmark-path"
+                    fill="none"
+                    d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+            </svg>
+            <div class="mdc-checkbox__mixedmark"></div>
+          </div>
+        </div>
+        <label for="closing-alerts">Send ‘closing soon’ alerts</label>
+      </div>
+    </div>
+    <p class="mdc-typography--body1">
+      <a href="/shortlist">Edit shortlist</a>
+    </p>
+  </div>
+  <button class="mdc-button mdc-button--raised">
+    <span class="far fa-envelope mdc-list-item__graphic" aria-hidden="true"></span>
+    Stop all emails
+  </button>
+
   <!-- <h2 class="mdc-typography--headline4 v-margin">
     Email alerts
   </h2>
@@ -34,7 +96,7 @@
   <hr /> -->
 
   <h2 class="mdc-typography--headline4 v-margin-full">
-    Change/set password (TODO)
+    Change/set password
   </h2>
   <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
     <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
@@ -45,30 +107,32 @@
     <div class="mdc-line-ripple"></div>
   </div>
 
-  <hr />
+  <!-- <hr /> -->
 
   <h2 class="mdc-typography--headline4 v-margin-full">
     Account
   </h2>
-  <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-        <button class="mdc-button mdc-button--raised mdc-button--export" data-dialog-target="#export-user-dialog">
-          <span class="far fa-upload mdc-list-item__graphic" aria-hidden="true"></span>
-          Export account settings
-        </button>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-        <button class="mdc-button mdc-button--raised mdc-button--import" data-dialog-target="#import-user-dialog">
-          <span class="far fa-download mdc-list-item__graphic" aria-hidden="true"></span>
-          Import account settings
-        </button>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-        <button class="mdc-button mdc-button--raised mdc-button--delete" data-dialog-target="#delete-user-dialog">
-          <span class="far fa-trash mdc-list-item__graphic" aria-hidden="true"></span>
-          Delete account
-        </button>
+  <div class="goodmoves-settings-account">
+    <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+          <button class="mdc-button mdc-button--raised mdc-button--export" data-dialog-target="#export-user-dialog">
+            <span class="far fa-upload mdc-list-item__graphic" aria-hidden="true"></span>
+            Export account settings
+          </button>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+          <button class="mdc-button mdc-button--raised mdc-button--import" data-dialog-target="#import-user-dialog">
+            <span class="far fa-download mdc-list-item__graphic" aria-hidden="true"></span>
+            Import account settings
+          </button>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+          <button class="mdc-button mdc-button--raised mdc-button--delete" data-dialog-target="#delete-user-dialog">
+            <span class="far fa-trash mdc-list-item__graphic" aria-hidden="true"></span>
+            Delete account
+          </button>
+        </div>
       </div>
     </div>
   </div>
