--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2122,24 +2122,28 @@ form.inline-form {
     flex: 0 0 auto;
     @media screen and (min-width: $mobile-landscape-breakpoint + 1) {
       .mdc-card {
-        width: 33vw;
+        width: 30vw;
       }
     }
     @media screen and (min-width: $mobile-breakpoint + 1) and (max-width: $mobile-landscape-breakpoint) {
       .mdc-card {
-        width: 50vw;
+        width: 47vw;
       }
     }
     @media screen and (max-width: $mobile-breakpoint) {
       .mdc-card {
-        width: 90vw;
+        width: 70vw;
       }
     }
   }
   .scroll-button {
     position: absolute;
-    z-index: 2;
+    height: 100%;
+    display: flex;
+    align-items: center;
     align-self: center;
+    width: $unit*3;
+    z-index: 2;
     // opacity: 0.4;
     // transition: opacity .1s ease-in-out;
     color: $mdc-theme-primary;
@@ -2163,8 +2167,8 @@ form.inline-form {
   top: 0; bottom: 0;
   z-index: 1;
   background-image:
-    linear-gradient(to right, $mdc-theme-secondary-light, $mdc-theme-secondary-light $unit*2, rgba(255, 255, 255, 0) $unit*4),
-    linear-gradient(to left , $mdc-theme-secondary-light, $mdc-theme-secondary-light $unit*2, rgba(255, 255, 255, 0) $unit*4);
+    linear-gradient(to right, $mdc-theme-secondary-light, $mdc-theme-secondary-light $unit*3, rgba(245, 245, 245, 0) $unit*4.5),
+    linear-gradient(to left , $mdc-theme-secondary-light, $mdc-theme-secondary-light $unit*3, rgba(245, 245, 245, 0) $unit*4.5);
 }
 
 @media screen and (max-width: $mobile-breakpoint) {
