--- a/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
@@ -126,7 +126,7 @@
             If you work for SDS or JCP please <a href="http://jobs.scvo.org.uk/Account/Login">log in here</a> to start the referral/application process.
           </p> -->
           <p>
-            If you work for SDS or JCP please <a href="/jobs/community-jobs-scotland/vacancies/sign-in?vacancy={{replace (replace request.url.path "/jobs/community-jobs-scotland/vacancies/" "") "/" "_"}}">log in here</a> to start the referral/application process.
+            If you work for SDS or JCP please <a href="/jobs/community-jobs-scotland/vacancies/sign-in?vacancy={{replace (replace request.url.path "/jobs/community-jobs-scotland/vacancies/" "") "/" "_"}}">sign in here</a> to start the referral/application process.
           </p>
           {{/if ~}}
           <hr />
