--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -954,7 +954,7 @@ a {
   }
   #vacancy-tab-bar {
     width: 100%;
-    background-color: $mdc-theme-complimentary;
+    background-color: $mdc-theme-complimentary-light;
     display: flex;
     border-radius: 2px 2px 0 0;
     .mdc-tab {
@@ -986,8 +986,8 @@ a {
       font-weight: $heading-light-font-weight;
     }
     .key-info-extra {
-      padding: $unit;
-      background-color: $mdc-theme-complimentary-light;
+      padding: $unit $unit 0;
+      // background-color: $mdc-theme-complimentary-light;
       .mdc-chip {
         margin-bottom: $unit/4;
         padding: $unit/5 $unit/2;
