--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1,9 +1,9 @@
 $mdc-theme-primary: #42842A;
-$mdc-theme-primary-light: #538F3D;
-$mdc-theme-primary-dark: #244817;
+$mdc-theme-primary-light: #9cd986;
+$mdc-theme-primary-dark: #336621;
 
-$mdc-theme-complimentary: #BAD2B1;
-$mdc-theme-complimentary-light: #DCE8D8;
+$mdc-theme-complimentary: #C1D0B1;
+$mdc-theme-complimentary-light: #dee6d6;
 
 $mdc-theme-secondary: #E0E0E0; // Gray 300
 $mdc-theme-secondary-light: #F5F5F5; // Gray 100
@@ -118,7 +118,7 @@ header {
       height: $header-lower-height;
     }
     .mdc-top-app-bar__lower .mdc-top-app-bar__section--align-start {
-      background-image: linear-gradient(60deg, $mdc-theme-primary-dark, $mdc-theme-primary-dark 310px, $mdc-theme-primary 311px, $mdc-theme-primary);
+      background-image: linear-gradient(60deg, $mdc-theme-primary-dark, $mdc-theme-primary-dark 220px, $mdc-theme-primary 221px, $mdc-theme-primary);
     }
     .mdc-top-app-bar__lower .mdc-top-app-bar__section--align-end {
       background-color: $mdc-theme-primary;
@@ -1665,7 +1665,7 @@ footer,
           font-size: 0.88rem;
           color: #777;
           a {
-            font-weight: 400;
+            font-weight: 600;
             color: #555;
           }
         }
