Added JSON LD to vacancies

--- a/sites/configurations/goodmoves/templates/vacancies/vacancy-head-tags.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/vacancy-head-tags.hbs
@@ -11,7 +11,7 @@
 {{/ifAny ~}}
 {{#if rendered.json_ld ~}}
 <script type="application/ld+json" data-dynamic="true">
-{{{rendered.json_ld}}}
+  {{> vacancy_json_ld}}
 </script>
 {{/if ~}}
 {{/with ~}}
