--- a/sites/configurations/goodmoves/partials/sign-in-social.hbs
+++ b/sites/configurations/goodmoves/partials/sign-in-social.hbs
@@ -59,7 +59,7 @@
           result.user.getIdTokenResult().then(function(idTokenResult) {
             console.log('ID Token Result', idTokenResult);
             goodmoves.setCookie('gm_token', idTokenResult.token, 7);
-            window.location.href = '{{@root.request.headers.referer}}';
+            window.location.href = '{{{@root.request.headers.referer}}}';
           });
         } else {
           $message.text('Something went wrong, registerd but no user?').show();
