--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -37,6 +37,8 @@
 <meta name="msapplication-TileImage" content="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/goodmoves/ms-icon-144x144.png">
 <meta name="theme-color" content="#3c7524">
 <link rel="search" type="application/opensearchdescription+xml" title="Goodmoves" href="/assets/opensearch.xml" />
+
+<link rel="canonical" href="https://goodmoves.com{{request.params.uri.pathname}}" />
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-6"></script>
 <script>
