--- a/sites/configurations/goodmoves/templates/account/settings.hbs
+++ b/sites/configurations/goodmoves/templates/account/settings.hbs
@@ -135,6 +135,21 @@
         </div>
       </div>
     </div>
+    <h3 class="mdc-typeography--headline5 v-margin-full">
+      Link accounts 
+    </h3>
+    <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid__inner">
+        {{#each (split "google,facebook,twitter" ",")}}
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+            <label>
+              <input type="checkbox" id="linked-account-{{this}}" data-provider="{{this}}" {{if (contains (map @root.data.auth.providerData (getProp "providerId")) (concat this ".com")) "checked"}}>
+              {{capitalize this}}
+            </label>
+          </div>
+        {{/each}}
+      </div>
+    </div>
   </div>
 </div>
 
