--- a/sites/configurations/goodmoves/templates/account/settings.hbs
+++ b/sites/configurations/goodmoves/templates/account/settings.hbs
@@ -1,5 +1,26 @@
 {{> vacancy_search_form this instance_id="perm"}}
 
+{{#*inline "linkChip"}}
+  <div class="mdc-chip {{#if linked}}mdc-chip--selected{{/if}}" data-provider-link="{{provider}}">
+    <span class="fab fa-{{provider}} mdc-chip__icon mdc-chip__icon--leading {{#if linked}}mdc-chip__icon--leading-hidden{{/if}}" aria-hidden="true"></span>
+    <div class="mdc-chip__checkmark">
+      <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
+        <path class="mdc-chip__checkmark-path" fill="none" stroke="#ffffff" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+      </svg>
+    </div>
+    <div class="mdc-chip__text noselect">
+      <span class="link-action">
+        {{#if linked}}
+          Unlink from 
+        {{else}}
+          Link to  
+        {{/if}}
+      </span>
+      {{capitalize provider}}
+    </div>
+  </div>
+{{/inline}}
+
 <div id="detailed-results-container" class="container-content goodmoves-settings">
   <h1 class="mdc-typography--headline3 v-margin-full">
     Settings
@@ -135,20 +156,20 @@
         </div>
       </div>
     </div>
-    <h3 class="mdc-typeography--headline5 v-margin-full">
-      Link accounts 
-    </h3>
-    <div class="mdc-layout-grid">
-      <div class="mdc-layout-grid__inner">
-        {{#each (split "google,facebook,twitter" ",")}}
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-            <label>
-              <input type="checkbox" id="linked-account-{{this}}" data-provider="{{this}}" {{if (contains (map @root.data.auth.providerData (getProp "providerId")) (concat this ".com")) "checked"}}>
-              {{capitalize this}}
-            </label>
-          </div>
-        {{/each}}
-      </div>
+  </div>
+  <h2 class="mdc-typography--headline4 v-margin-full">
+    Linked accounts 
+  </h2>
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner">
+      {{#each (split "google,facebook,twitter" ",")}}
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+          {{> linkChip 
+              provider=this 
+              linked=(contains (map @root.data.auth.providerData (getProp "providerId")) (concat this ".com"))
+          }}
+        </div>
+      {{/each}}
     </div>
   </div>
 </div>
