--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -1,4 +1,4 @@
-<div class="mdc-card goodmoves-vacancy full {{if top_job "top-job"}}" data-vacancy-id="{{Id}}">
+<div class="mdc-card goodmoves-vacancy goodmoves-{{vacancy_status}} full {{if top_job "top-job"}}" data-vacancy-id="{{Id}}">
   <!-- <div class="mdc-card__action-icons mdc-chip-set">
     {{> shortlist_chip id=Id}}
   </div> -->
