--- a/sites/configurations/goodmoves/templates/vacancies/vacancy.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/vacancy.hbs
@@ -13,7 +13,7 @@
     <div class="mdc-typography--headline5 v-margin-full">
       Similar jobs
     </div>
-    <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid equal-height">
       <div class="mdc-layout-grid__inner">
         {{#each data.supplimentaryResponses.related.hits.hits ~}}
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
