--- a/sites/configurations/goodmoves/templates/account/settings.hbs
+++ b/sites/configurations/goodmoves/templates/account/settings.hbs
@@ -27,7 +27,7 @@
   </h1>
 
   <h2 class="mdc-typography--headline4 v-margin-full">
-    Emails
+    Emails settings
   </h2>
   <div class="goodmoves-saved-searches">
     <div class="settings">
@@ -88,90 +88,88 @@
     Stop all emails
   </button>
 
-  <!-- <h2 class="mdc-typography--headline4 v-margin">
-    Email alerts
-  </h2>
-  <p class="mdc-typography--body1">
-    You have 1 saved search for your email alerts.
-  </p>
+  <section class="settings-section">
+    <h2 class="mdc-typography--headline4 v-margin-full">
+      Account settings
+    </h2>
 
-  <form action="/update-email-preferences" method="POST" class="v-margin-full">
-    <h3 class="mdc-typography--headline5 v-margin">
-      Select day
+    <h3 class="mdc-typography--headline5">
+      Change/set password
     </h3>
-    {{#each (split "monday,tuesday,wednesday,thursday,friday,saturday,sunday" ",")}}
-      <div class="mdc-switch">
-        <input type="checkbox" id="email-switch-{{this}}" class="mdc-switch__native-control" role="switch"
-          {{~#if (contains @root.data.email_days this)~}}checked="checked"{{/if}} name="{{this}}" onchange="$('#email-preferences-submit').prop('disabled', false);">
-        <div class="mdc-switch__background">
-          <div class="mdc-switch__knob"></div>
-        </div>
-      </div>
-      <label for="email-switch-{{this}}">
-        {{capitalize this}}
-      </label>
-    {{/each}}
-    <button class="mdc-button mdc-button--raised mdc-ripple-surface mdc-ripple-surface--primary" type="submit" id="email-preferences-submit" data-mdc-auto-init="MDCRipple" disabled>Update preferences</button>
-  </form>
-
-  <hr /> -->
-
-  <h2 class="mdc-typography--headline4 v-margin-full">
-    Change/set password
-  </h2>
-  <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-    <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
-    <input type="password" id="sign-in-password" class="mdc-text-field__input" data-lpignore="true" autocomplete="off" />
-    <label class="mdc-floating-label mdc-floating-label--float-above" for="sign-in-password">
-      Password
-    </label>
-    <div class="mdc-line-ripple"></div>
-  </div>
-
-  <!-- <hr /> -->
-
-  <h2 class="mdc-typography--headline4 v-margin-full">
-    Account
-  </h2>
-  <div class="goodmoves-settings-account">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-          <button class="mdc-button mdc-button--raised mdc-button--export" data-dialog-target="#export-user-dialog">
-            <span class="far fa-upload mdc-list-item__graphic" aria-hidden="true"></span>
-            Export account settings
-          </button>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
+          <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+            <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
+            <input type="password" id="change-password-password" class="mdc-text-field__input" data-lpignore="true" autocomplete="off" />
+            <label class="mdc-floating-label mdc-floating-label--float-above" for="change-password">
+              Password
+            </label>
+            <div class="mdc-line-ripple"></div>
+          </div>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-          <button class="mdc-button mdc-button--raised mdc-button--import" data-dialog-target="#import-user-dialog">
-            <span class="far fa-download mdc-list-item__graphic" aria-hidden="true"></span>
-            Import account settings
-          </button>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-          <button class="mdc-button mdc-button--raised mdc-button--delete" data-dialog-target="#delete-user-dialog">
-            <span class="far fa-trash mdc-list-item__graphic" aria-hidden="true"></span>
-            Delete account
-          </button>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
+          <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+            <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
+            <input type="password" id="change-password-confirm" class="mdc-text-field__input" data-lpignore="true" autocomplete="off" />
+            <label class="mdc-floating-label mdc-floating-label--float-above" for="change-password-confirm">
+              Confirm password
+            </label>
+            <div class="mdc-line-ripple"></div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <h2 class="mdc-typography--headline4 v-margin-full">
-    Linked accounts 
-  </h2>
-  <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid__inner">
-      {{#each (split "google,facebook,twitter" ",")}}
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-          {{> linkChip 
-              provider=this 
-              linked=(contains (map @root.data.auth.providerData (getProp "providerId")) (concat this ".com"))
-          }}
-        </div>
-      {{/each}}
+    
+    <button class="mdc-button mdc-button--raised mdc-button--change_password pull-right" id="change-password">
+      <span class="far fa-lock mdc-list-item__graphic" aria-hidden="true"></span>
+      Change password
+    </button>
+
+    <h3 class="mdc-typography--headline5">
+      Linked accounts 
+    </h3>
+    <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid__inner">
+        {{#each (split "google,facebook,twitter" ",")}}
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+            {{> linkChip 
+                provider=this 
+                linked=(contains (map @root.data.auth.providerData (getProp "providerId")) (concat this ".com"))
+            }}
+          </div>
+        {{/each}}
+      </div>
     </div>
-  </div>
+
+    <h3 class="mdc-typography--headline5">
+      Account data
+    </h3>
+    <div class="goodmoves-settings-account">
+      <div class="mdc-layout-grid">
+        <div class="mdc-layout-grid__inner">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+            <button class="mdc-button mdc-button--raised mdc-button--export" data-dialog-target="#export-user-dialog">
+              <span class="far fa-upload mdc-list-item__graphic" aria-hidden="true"></span>
+              Export account settings
+            </button>
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+            <button class="mdc-button mdc-button--raised mdc-button--import" data-dialog-target="#import-user-dialog">
+              <span class="far fa-download mdc-list-item__graphic" aria-hidden="true"></span>
+              Import account settings
+            </button>
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+            <button class="mdc-button mdc-button--raised mdc-button--delete" data-dialog-target="#delete-user-dialog">
+              <span class="far fa-trash mdc-list-item__graphic" aria-hidden="true"></span>
+              Delete account
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </div>
 
 <aside id="delete-user-dialog"
