--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -86,6 +86,69 @@
   <div class="mdc-dialog__backdrop"></div>
 </aside>
 
+<aside id="edit-search-dialog"
+  class="mdc-dialog"
+  role="alertdialog"
+  aria-labelledby="edit-search-dialog-label"
+  aria-describedby="edit-search-dialog-description"
+  data-mdc-auto-init="MDCDialog">
+  <div class="mdc-dialog__surface">
+    <header class="mdc-dialog__header">
+      <h2 id="edit-search-dialog-label" class="mdc-dialog__header__title">
+        Your search
+        {{#if data.auth ~}}
+        {{#with (
+                  querystringify (obj)
+                  keywords=@root.request.params.query.keywords
+                  salary_min=@root.request.params.query.salary_min
+                  salary_max=@root.request.params.query.salary_max
+                  roles=@root.request.params.query.roles
+                  sectors=@root.request.params.query.sectors
+                  statuses=@root.request.params.query.statuses
+                  distance=@root.request.params.query.distance
+                  lat=@root.request.params.query.lat
+                  lng=@root.request.params.query.lng
+                  location=@root.request.params.query.location
+                ) ~}}
+        {{#if (itemAt @root.data.saved_searches.items (indexOf (map @root.data.saved_searches.items (getProp 'querystring')) this)) ~}}
+        {{#with (itemAt @root.data.saved_searches.items (indexOf (map @root.data.saved_searches.items (getProp 'querystring')) this)) ~}}
+        <span class="mdc-typography--body1">
+          <strong>{{name}}</strong>
+        </span>
+        {{/with ~}}
+        {{/if ~}}
+        {{/with ~}}
+        {{/if ~}}
+      </h2>
+    </header>
+    <section id="edit-search-dialog-description" class="mdc-dialog__body">
+      <div class="mdc-form-field">
+        <div class="mdc-checkbox">
+          <input type="checkbox"
+                 class="mdc-checkbox__native-control"
+                 id="email-on-edit" />
+          <div class="mdc-checkbox__background">
+            <svg class="mdc-checkbox__checkmark"
+                 viewBox="0 0 24 24">
+              <path class="mdc-checkbox__checkmark-path"
+                    fill="none"
+                    d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+            </svg>
+            <div class="mdc-checkbox__mixedmark"></div>
+          </div>
+        </div>
+        <label for="email-on-edit">Send jobs matching this search by email</label>
+      </div>
+    </section>
+    <footer class="mdc-dialog__footer">
+      <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel">Cancel</button>
+      <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--delete">Delete search</button>
+      <button type="submit" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--accept">Save</button>
+    </footer>
+  </div>
+  <div class="mdc-dialog__backdrop"></div>
+</aside>
+
 <div class="mdc-layout-grid head">
   <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
@@ -111,12 +174,17 @@
         </script>
         {{#if (itemAt @root.data.saved_searches.items (indexOf (map @root.data.saved_searches.items (getProp 'querystring')) this)) ~}}
         {{#with (itemAt @root.data.saved_searches.items (indexOf (map @root.data.saved_searches.items (getProp 'querystring')) this))}}
-          <span class="mdc-typography--headline5">{{name}}</span>
-          {{#> ajax_chip
+          <h3 class="mdc-typography--headline6">
+            Your search
+            <span class="mdc-typography--body1">
+              <a name="#" data-dialog-target="#edit-search-dialog" style="padding-left:.5rem;cursor:pointer;">{{name}}</a>
+            </span>
+          </h3>
+          <!-- {{#> ajax_chip
             onUrl="/toggle-subscription"
             offUrl="/toggle-subscription"
-            onText="Added to email"
-            offText="Add to email"
+            onText="Email"
+            offText="Email"
             onMethod="POST"
             offMethod="POST"
             iconClasses="far fa-envelope"
@@ -131,7 +199,7 @@
           }
           {{/ajax_chip}}
           {{> delete_search name=name formClasses="inline-form"}}
-          {{/with}}
+          {{/with}} -->
         {{else}}
           <button class="mdc-button mdc-button--raised mdc-button--large save-search" id="save-search-button" data-dialog-target="#save-search-dialog">
             <span class="far fa-search-plus mdc-list-item__graphic" aria-hidden="true"></span>
